# SimulatedUniverse-count

./: CMakeLists.txt  LICENSE  calculator.cpp
.github/workflows/: build.yml
src/: simulated_universe.cpp
